--- a/V2_dev/SABRE2-V3.ui
+++ b/V2_dev/SABRE2-V3.ui
@@ -2030,7 +2030,7 @@ rgb(170, 255, 255)}</string>
               </row>
               <column>
                <property name="text">
-                <string>Member #</string>
+                <string>Panel #</string>
                </property>
                <property name="font">
                 <font>
@@ -2125,25 +2125,21 @@ rgb(170, 255, 255)}</string>
             </item>
             <item>
              <layout class="QGridLayout" name="gridLayout_6">
-              <item row="0" column="0">
-               <widget class="QLabel" name="Add_shear_label">
+              <item row="2" column="0" colspan="2">
+               <widget class="QPushButton" name="Delete_last_panel">
                 <property name="text">
-                 <string>Add Additional Shear 
-Panel  for Member:</string>
+                 <string>Delete Last Panel</string>
                 </property>
                </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="QLineEdit" name="Add_Shear_Panel_Line"/>
               </item>
               <item row="1" column="0" colspan="2">
                <widget class="QPushButton" name="Shear_Panel_Add">
                 <property name="text">
-                 <string>Apply</string>
+                 <string>Add New Shear Panel</string>
                 </property>
                </widget>
               </item>
-              <item row="2" column="0">
+              <item row="3" column="0">
                <spacer name="verticalSpacer_2">
                 <property name="orientation">
                  <enum>Qt::Vertical</enum>
