uniform load table works, bug in the array member and segment number for the array

--- a/V2_dev/SABRE2-V3.ui
+++ b/V2_dev/SABRE2-V3.ui
@@ -461,7 +461,7 @@
        <enum>QTabWidget::Triangular</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>4</number>
       </property>
       <property name="iconSize">
        <size>
@@ -2769,7 +2769,7 @@ rgb(170, 255, 255)}</string>
         <item>
          <widget class="QTabWidget" name="LC_tabs">
           <property name="currentIndex">
-           <number>0</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="Load_Combinations">
            <attribute name="title">
@@ -3132,7 +3132,7 @@ rgb(170, 255, 255)}</string>
                <bool>true</bool>
               </property>
               <attribute name="horizontalHeaderDefaultSectionSize">
-               <number>150</number>
+               <number>125</number>
               </attribute>
               <row>
                <property name="text">
@@ -3141,7 +3141,7 @@ rgb(170, 255, 255)}</string>
               </row>
               <column>
                <property name="text">
-                <string>Member / Segment #</string>
+                <string>Segment #</string>
                </property>
                <property name="font">
                 <font>
@@ -3152,7 +3152,18 @@ rgb(170, 255, 255)}</string>
               </column>
               <column>
                <property name="text">
-                <string>Load Combination Name</string>
+                <string>LC Name</string>
+               </property>
+               <property name="font">
+                <font>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>Load Height</string>
                </property>
                <property name="font">
                 <font>
